[tool.poetry]
name = "bella"
version = "2.1.3"
description = "BellaPy - A useful helper for any python program"
authors = ["Dong Nguyen <ndaidong@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
coveralls = "^2.1.2"
flake8 = "^3.8.3"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
