[tool.poetry]
name = "bella"
version = "2.1.4"
description = "BellaPy - A useful helper for any python program"
authors = ["Dong Nguyen <ndaidong@gmail.com>"]
maintainers = ["Dong Nguyen <ndaidong@gmail.com>"]
homepage = "https://pypi.org/project/bella"
repository = "https://github.com/ndaidong/bellapy"
license = "MIT"
readme = "README.md"

packages = [
  {include = "bella"}
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
coveralls = "^2.1.2"
flake8 = "^3.8.3"
pytest-cov = "^2.10.1"
safety = "^1.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
