[tool.poetry]
name = "bella"
version = "2.1.6"
description = "BellaPy - A useful helper for any python program"
authors = ["Dong Nguyen <ndaidong@gmail.com>"]
maintainers = ["Dong Nguyen <ndaidong@gmail.com>"]
homepage = "https://pypi.org/project/bella"
repository = "https://github.com/ndaidong/bellapy"
license = "MIT"
readme = "README.md"

packages = [
  {include = "bella"}
]

[tool.poetry.dependencies]
python = "^3.10"
ujson = "^5.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coveralls = "^3.3.1"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
